# windows_auto_locker

./: .gitignore  CMakeLists.txt  README.md  machine_learning.cpp  machine_learning.h  main.cpp
